# prototype-quantum-kernel-training

./: CITATION.bib  CONTRIBUTING.md  INSTALL.md  Makefile  README.md  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: BUG_REPORT.yaml  bug_report.md  feature_request.md
.github/workflows/: citation.yml  makefile.yml  test_development_versions.yml  test_minimum_versions.yml  tests.yml
docs/: installation_guide.ipynb  installation_guide.md
docs/background/: README.md  qkernels_and_data_w_group_structure.ipynb  svm_weighted_kernel_alignment.ipynb
docs/how_tos/: README.md  assign_parameters_using_trainable_kernel.ipynb  bind_parameters_using_quantum_kernel.ipynb  bind_parameters_using_trainable_fidelity_quantum_kernel.ipynb  create_custom_kernel_loss_function.ipynb  create_custom_quantum_feature_map.ipynb  how_tos.md  train_kernels_using_qiskit_feature_maps.ipynb
docs/tutorials/: README.md  kernel_optimization_using_qkt.ipynb  kernel_optimization_using_qkt_runtime_client.ipynb
qkt/: __init__.py
qkt/feature_maps/: __init__.py  covariant_feature_map.py
qkt/utils/: __init__.py  utils.py
test/: test_qkt_with_custom_runtime_image.ipynb
