[tox:tox]
[metadata]
name = quantum_kernel_training
version = 0.0.0
url = https://github.com/qiskit-community/quantum-kernel-training
maintainer = Caleb Johnson
maintainer_email = caleb.johnson@ibm.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Artificial Intelligence
license = Apache 2.0
description = Train quantum kernels for machine learning tasks

[options]
install_requires=
    certifi>=2021.10.8
    matplotlib>=3.4.3
    pandas>=1.3.4
    qiskit-aer>=0.10.2
    qiskit-terra>=0.19.1
    qiskit-machine-learning>=0.3.0
[options.extras_require]
dev =
    treon>=0.1.3
